--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["force-palette.js"]
+      "js": ["colors.js", "force-palette.js"]
     }
   ]
 
